--- a/login/styles/style.css
+++ b/login/styles/style.css
@@ -4,8 +4,13 @@
 }
 
 
-.slide {
-   padding-top:375px;
+.slide1 {
+    margin: 32px;
+}
+
+.slide2 {
+    padding-left:25px;
+    padding-right: 10px;
 }
 
 html {
@@ -16,7 +21,7 @@ html {
 
 body {
    background-image: url("/assets/background.png");
-    height: 100%;
+    height: 100vh;
     background-repeat: no-repeat;
     background-size: cover;
     margin: 0; 
@@ -45,22 +50,20 @@ main {
 
 .auth-page-container {
     display:flex;
-    justify-content: end;
-   /* padding: 10px 100px; */
-   /* width: 100%; */
+    justify-content: space-between;
     margin-top: 63px;
+    margin-right: 20px;
+    align-items: center;
 }
 
 .auth-page-card {
     background: #F0F0F0;
     border-radius: 12px;
-    width: 462px;
-    height: 702px;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    padding: 25px 50px 40px 50px;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: space-evenly;
+    margin-left: auto;
 }
 
 .container-words {
@@ -74,12 +77,14 @@ main {
     font-size: 1.25rem;
     font-weight: 700;
     color:#515151; 
+    margin-bottom:8px;
 }
 
 .login {
     font-weight: 400;
     font-size: 16px;
     line-height: 21px;
+    margin-bottom:32px;
 }
 
 .auth-page-form {
@@ -89,8 +94,6 @@ main {
 }
 
 .input-box-username, .input-box-password {
-    width: 362px;
-    height: 47px;
     position: relative;
 }
 
@@ -103,6 +106,10 @@ main {
     cursor: pointer;
 }
 
+.form-container {
+    margin-bottom: 14px;
+}
+
 .input-email, .input-password {
     width: 100%;
     background-color: white;
@@ -110,46 +117,58 @@ main {
     border-style: none;
     padding: 15px;
     border-radius: 4px;
-}
-
-input[type=checkbox]:checked {
-    accent-color:#4CC986;
-    border: 1px solid rgb(150 150 150 / 30%);
+    font-size: 15px;
 }
 
 
-input[type=checkbox]::before {
-    accent-color:#4CC986;
-    border: 1px solid rgb(150 150 150 / 30%);
-}
+input[type='password'] {
+    color: #3D3D3D;
 
+}
 
 .input-box-side {
     display: flex;
     font-size: 0.87rem;
+    margin-bottom: 24px;
 }
-
 
 .input-box-remember-me {
     display:flex;
-    padding-right: 45px;
+    align-items: center;
+    gap: 16px;
 }
 
 .label-remember-me {
-    margin-left: 10px;
     font-size: 14px;
-    font-weight: 400;
 }
+
+input[type=checkbox] {
+    -webkit-appearance: none;
+    width: 1.25rem;
+    height: 1.25rem;
+    color: #8F8F8F;
+    border: 1.5px solid #8F8F8F;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+input[type=checkbox]:checked {
+    background-color:#36B972;
+    background-image: url("/assets/Tick.png");
+    background-repeat: no-repeat;
+    background-position: center;
+} 
 
 .forgot-password {
     color: #4CC986;
-    margin-left:80px;
+    margin-left:115px;
     font-size: 14px;
-    font-weight: 400;
+    font-weight: 600;
+    align-self: center;
+    cursor: pointer;
 }
 
 .login-button {
-    width: 362px;
     height: 47px;
     font-size: 1.12rem;
     font-weight: 700;
@@ -158,11 +177,13 @@ input[type=checkbox]::before {
     cursor: pointer;
     border-style: none;
     border-radius: 6px;
-    position: relative;
+    margin-bottom: 32px;
 }
 
 .registration {
     display: flex;
+    align-self:center;
+    margin-bottom: 24px;
 }
 
 .registration-none {
@@ -175,6 +196,7 @@ input[type=checkbox]::before {
     font-size: 14px;
     font-weight: 600;
     color: #36B972;
+    cursor: pointer;
 }
 
 .social-media-list {
@@ -189,7 +211,6 @@ input[type=checkbox]::before {
     justify-content: center;
     color: #36B972;
     border-color: #36B972;
-    width: 362px;
     height: 47px;
     font-size: 1.12rem;
     border-radius: 6px;
@@ -206,19 +227,21 @@ input[type=checkbox]::before {
 
 .line {
     display: flex;
-    width: 80%;
+    width: 100%;
     font-weight: 400;
     font-size: 14px;
     line-height: 19px;
     text-align: center;
     color: #515151;
-   
+    align-self: center;
+    margin-bottom: 29.29px;
+    gap: 10px;
 }
   
 .line:before, .line:after {
     content: "";
     flex: 1 1;
-    border: 0.1px solid #515151;
+    border-bottom: 1px solid #515151;
     margin: auto;
 }
 
@@ -230,3 +253,90 @@ input[type=checkbox]::before {
     margin-left: 10px;
 }
 
+.carrousel {
+    display:flex;
+    justify-content: center;
+    margin: 120px;
+}
+
+/*--------------Media Queries ---------------- */
+
+/*Responsive Tablet*/
+
+@media (max-width: 768px){
+    header {
+        display: flex;
+        justify-content: center;
+    }
+
+    header img {
+        align-self: center;
+        margin:0;
+    }
+
+    .auth-page-card {
+        margin:0;
+        margin-right: 35px;
+    }
+
+    .carrousel {
+        margin-top:65px;
+    }
+
+    .slide1 {
+        margin-bottom:65px;
+    }
+
+    .slide2 {
+        margin-right: 8px;
+        margin-bottom:25px;
+    }
+}
+
+/*Responsive Mobile */
+/* @media (max-width: 320px) {
+
+    header img {
+        width: 194.17px;
+        height: 25px;
+    }
+
+    .auth-page-container {
+        display:flex;
+        justify-content: center;
+        margin:0;
+    }
+
+    .auth-page-card {
+        padding: 40px 30px;
+        height: 689px;
+    }
+
+    .container-words {
+     display: flex;   
+    }
+
+    .login {
+        display: flex;
+    }
+
+    .slide1 {
+        display: none;
+    }
+
+    .slide2 {
+        display: none;
+    }
+
+    .carrousel {
+        display: none;
+    }
+
+    .input-email, .input-password {
+        width: 288px;
+        height: 47px;
+        margin-left:35px;
+    
+    }
+
+} */
