--- a/styles/login.css
+++ b/styles/login.css
@@ -4,6 +4,37 @@
 }
 
 
+:root {
+    --green: #4CC986;
+    --secondary-green: #36B972;
+    --white: #ffffff;
+    --grey: #515151;
+    --fair-grey: #8F8F8F;
+    --dark-grey: #3D3D3D;
+    --whiteboard: #F0F0F0;
+}
+
+
+html {
+    height: 100%;
+    margin: 0;
+   
+}
+
+body {
+   background-image: url("../assets/background.png");
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: 0; 
+    background-attachment: fixed;
+    
+} 
+
+main {
+    display:block;
+}
+
 .slide1 {
     margin: 32px;
 }
@@ -13,21 +44,11 @@
     padding-right: 10px;
 }
 
-html {
-    height: 100%;
-    margin: 0;
-   
+.slide1, .slide2 {
+    cursor: pointer;
 }
 
-body {
-   background-image: url("/assets/background.png");
-    height: 100vh;
-    background-repeat: no-repeat;
-    background-size: cover;
-    margin: 0; 
-    background-attachment: fixed;
- 
-} 
+/*-------------Header-------------*/
 
 header {
     display: flex;
@@ -44,20 +65,19 @@ header img {
     margin-left: 53.23px;
 }
 
-main {
-    display:block;
-}
+
+/*-------------Login-------------*/
 
 .auth-page-container {
     display:flex;
     justify-content: space-between;
     margin-top: 63px;
-    margin-right: 20px;
+    margin-right: 5px;
     align-items: center;
 }
 
 .auth-page-card {
-    background: #F0F0F0;
+    background: var(--whiteboard);
     border-radius: 12px;
     padding: 25px 50px 40px 50px;
     display: flex;
@@ -76,7 +96,7 @@ main {
     
     font-size: 1.25rem;
     font-weight: 700;
-    color:#515151; 
+    color: var(--grey);
     margin-bottom:8px;
 }
 
@@ -97,12 +117,12 @@ main {
     position: relative;
 }
 
-#togglePassword {
+img.toggle-password {
     position: absolute;
     right:3px;
     top: 15px;
     margin-right: 7px;
-    color: #4CC986;
+    color: var(--green);
     cursor: pointer;
 }
 
@@ -112,7 +132,7 @@ main {
 
 .input-email, .input-password {
     width: 100%;
-    background-color: white;
+    background-color: var(--white);
     height: 47px;
     border-style: none;
     padding: 15px;
@@ -122,7 +142,7 @@ main {
 
 
 input[type='password'] {
-    color: #3D3D3D;
+    color: var(--dark-grey);
 
 }
 
@@ -146,34 +166,39 @@ input[type=checkbox] {
     -webkit-appearance: none;
     width: 1.25rem;
     height: 1.25rem;
-    color: #8F8F8F;
-    border: 1.5px solid #8F8F8F;
+    color: var(--fair-grey);
+    border: 1.5px solid var(--fair-grey);
     border-radius: 4px;
     cursor: pointer;
 }
 
 input[type=checkbox]:checked {
-    background-color:#36B972;
-    background-image: url("/assets/Tick.png");
+    background-color: var(--secondary-green);
+    background-image: url("../assets/icons-login/Tick.png");
     background-repeat: no-repeat;
     background-position: center;
 } 
 
 .forgot-password {
-    color: #4CC986;
+    color: var(--green);
     margin-left:115px;
     font-size: 14px;
     font-weight: 600;
     align-self: center;
     cursor: pointer;
+    text-decoration: none;
+}
+
+.forgot-password:hover {
+    text-decoration:underline;
 }
 
 .login-button {
     height: 47px;
     font-size: 1.12rem;
     font-weight: 700;
-    background-color: #4CC986;
-    color: white;
+    background-color: var(--green);
+    color: var(--white);
     cursor: pointer;
     border-style: none;
     border-radius: 6px;
@@ -195,34 +220,13 @@ input[type=checkbox]:checked {
 .registration-now {
     font-size: 14px;
     font-weight: 600;
-    color: #36B972;
+    color: var(--secondary-green);
     cursor: pointer;
+    text-decoration: none;
 }
 
-.social-media-list {
-    display:flex;
-    flex-direction: column;
-    justify-content:space-around;
-    gap: 24px;
-}
-
-.social-button {
-    display: flex;
-    justify-content: center;
-    color: #36B972;
-    border-color: #36B972;
-    height: 47px;
-    font-size: 1.12rem;
-    border-radius: 6px;
-    border: 2px solid #36B972;
-    gap: 15px;
-    font-weight: 700;
-    cursor: pointer;
-}
-
-
-.social-tittle, .social-button img {
-    align-self: center;
+.registration-now:hover {
+    text-decoration: underline;
 }
 
 .line {
@@ -232,7 +236,7 @@ input[type=checkbox]:checked {
     font-size: 14px;
     line-height: 19px;
     text-align: center;
-    color: #515151;
+    color: var(--grey);
     align-self: center;
     margin-bottom: 29.29px;
     gap: 10px;
@@ -241,7 +245,7 @@ input[type=checkbox]:checked {
 .line:before, .line:after {
     content: "";
     flex: 1 1;
-    border-bottom: 1px solid #515151;
+    border-bottom: 1px solid var(--grey);
     margin: auto;
 }
 
@@ -253,10 +257,49 @@ input[type=checkbox]:checked {
     margin-left: 10px;
 }
 
+.social-media-list {
+    display:flex;
+    flex-direction: column;
+    justify-content:space-around;
+    gap: 24px;
+}
+
+.social-button1, .social-button2, .social-button3 {
+    display: flex;
+    position: relative;
+    justify-content: center;
+    color: var(--secondary-green);
+    border-color: var(--secondary-green);
+    height: 47px;
+    font-size: 1.12rem;
+    border-radius: 6px;
+    border: 2px solid var(--secondary-green);
+    gap: 15px;
+    font-weight: 700;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+
+.social-button2, .social-button3 {
+    min-width: 50px;
+}
+
+.social-tittle, .social-button1 img, .social-button2 img, .social-button3 img {
+    align-self: center;
+}
+
+a img {
+    position: absolute;
+    left: 60px;
+}
+
+
 .carrousel {
     display:flex;
     justify-content: center;
-    margin: 120px;
+    margin: 80px;
+    cursor: pointer;
 }
 
 /*--------------Media Queries ---------------- */
