--- a/styles/login.css
+++ b/styles/login.css
@@ -8,6 +8,7 @@
     --green: #4CC986;
     --secondary-green: #36B972;
     --white: #ffffff;
+    --light-grey:  #E1E1E4;
     --grey: #515151;
     --fair-grey: #8F8F8F;
     --dark-grey: #3D3D3D;
@@ -22,7 +23,7 @@ html {
 }
 
 body {
-   background-image: url("../assets/background.png");
+    background-image: url("../assets/background-1.jpg");
     height: 100vh;
     background-repeat: no-repeat;
     background-size: cover;
@@ -30,6 +31,27 @@ body {
     background-attachment: fixed;
     
 } 
+
+.active {
+    cursor: pointer;
+    display: flex;
+    background-color: var(--grey);
+    opacity: 100% !important;
+    width: 7px;
+    height: 7px;
+    border-radius: 50%
+}
+
+.carrousel-dot-1, .carrousel-dot-2, .carrousel-dot-3, .carrousel-dot-4, .carrousel-dot-5, .carrousel-dot-6 {
+    cursor: pointer;
+    display: flex;
+    background-color: var(--grey);
+    opacity: 25%;
+    width: 7px;
+    height: 7px;
+    border-radius: 50%
+}
+
 
 main {
     display:block;
@@ -41,7 +63,7 @@ main {
 
 .slide2 {
     padding-left:25px;
-    padding-right: 10px;
+    padding-right: 20px;
 }
 
 .slide1, .slide2 {
@@ -160,6 +182,11 @@ input[type='password'] {
 
 .label-remember-me {
     font-size: 14px;
+}
+
+#error-container {
+    color: red;
+    font-weight: 600;
 }
 
 input[type=checkbox] {
@@ -296,10 +323,17 @@ a img {
 
 
 .carrousel {
-    display:flex;
-    justify-content: center;
-    margin: 80px;
-    cursor: pointer;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    width: 120px;
+    height: 27px;
+    background-color: var(--light-grey);
+    border-radius: 18px;
+    padding-left:13px;
+    margin-left: 650px;
+    margin-top:70px;
+
 }
 
 /*--------------Media Queries ---------------- */
