created skeleton and responsive corrections

--- a/styles/home.css
+++ b/styles/home.css
@@ -10,32 +10,69 @@
     --fair-grey2: #939393;
     --black-gradient: rgba(255,255,255, 0);
     --dark-grey: #3D3D3D; 
-    /* --deep-grey: #141414; */
-    /* --card-grey: #303030; */
 }
 
+/*---------------Skeleton---------------*/
 
-.loading {
-    display: none;
-    align-self: center;
-    margin-left: auto;
-    margin-right: auto;
+.skeleton {
+    display: flex;
+    flex-direction: column;
+    flex-flow: wrap;
+    justify-content: flex-end;
+    gap: 24px;
+    max-width: 1137px;
+}
+.card-skeleton {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    width: 363px;
+    height: 314px;
+    border-radius: 12px;
+    background: linear-gradient(270deg, #FFFFFF 0%, #E5E5E5 50%);
+    border: 1px solid linear-gradient(270deg, #FFFFFF 0%, #E5E5E5 50%);
+    box-shadow: 0px 0px 7px 0px #6A6A6A40;
+    animation: loadingAnimation 1.5s infinite;
 }
 
-.loading::after {
-    content:"";
-    width: 50px;
-    height: 50px;
-    border: 10px solid #dddddd;
-    border-top-color: var(--green3);
-    border-radius: 50%;
-    animation: loading 1s linear infinite;
-}
-
-@keyframes loading {
-    to {
-        transform: rotate(1turn);
+@keyframes loadingAnimation {
+    0% {
+      background: white;
     }
+    50% {
+      background: #E5E5E5;
+    }
+    100% {
+      background: white;
+    }
+  }
+
+.container-sk {
+    display: flex;
+    gap: 20px;
+    margin: 26px 0px 15px 15px;
+}
+
+.title-skeleton {
+    width: 293px;
+    height: 21px;
+    border-radius: 30px;
+    background: linear-gradient(270deg, #FFFFFF 0%, #E5E5E5 50%);
+    border: 1px solid linear-gradient(270deg, #FFFFFF 0%, rgba(255, 255, 255, 0.05) 50%);
+    margin-left: 15px;
+}
+
+.container-details-skeleton {
+    display:flex;
+    flex-direction: column;
+    gap:10px;
+}
+
+.details-skeleton {
+    width: 137px;
+    height: 12px;
+    border-radius:17px;
+    background: linear-gradient(270deg, #FFFFFF 0%, #E5E5E5 50%);
 }
 
 a {
@@ -805,6 +842,7 @@ hr:last-child {
 
 /*Responsive Tablet*/
 @media (max-width: 768px) {
+
     header {
         height: 78px;
     }
@@ -853,15 +891,13 @@ hr:last-child {
         height: 1024px;
         z-index: 1;
         position: absolute;
-        padding-left: 16px;
+        padding: 0px 16px 0px 16px;
         animation: Anim-menu 0.3s linear 0s 1 normal forwards;
     }
 
     .cross-hamburger {
         display: flex;
         justify-content: flex-end;
-        margin: 22px 22px 0px 0px;
-        margin-left: 16px;
         cursor: pointer;
     }
 
@@ -901,8 +937,10 @@ hr:last-child {
     .navigation-home {
         margin-top:18px;
     }
+
     .search-bar {
         margin-right: 140px;
+        z-index:1;
     }
 
     .navigation-links a {
@@ -910,13 +948,19 @@ hr:last-child {
     }
 
     .logt {
-        margin-top:635px;
+        display:flex;
+        flex-direction: column;
+        gap: 650px;
     }
 
     .navigation-links a:first-child {
         color: var(--green2);
     }
     
+    .card-skeleton {
+        width: 351px;
+    }
+
     article, .game-ph img {
         width: 351px;
     }
@@ -926,17 +970,33 @@ hr:last-child {
     }
 
     .modal {
-        width: 720px;
-        height: 984px;
+        width: 95%;
+        height: 98%;
+    }
+
+    .details-modal {
+        display: grid;
+    }
+
+    .images-modal-one img {
+        max-width: 152px;
     }
 
     .game-info-modal {
         max-height: 122px;
     }
+
+    .details-icons-modal {
+        margin-top: 0px;
+    }
 }
 
 /*Responsive Mobile */
-@media (max-width: 320px) {
+@media (max-width: 420px) {
+
+    body {
+        overflow-x: hidden;
+    }
 
     main {
         padding: 0 7px;
@@ -946,14 +1006,26 @@ hr:last-child {
         height: 50px;
     }
 
+    .header-elem {
+        display: flex;
+    }
+
     .logo img {
         display:block;
         width: 137px;
         margin-right: 80px;
     }
 
+    .hamburger {
+        margin-left: 19px;
+    }
+
     .hamburger img {
       margin-left: 0;
+    }
+
+    .h img {
+        height: 14px;
     }
 
     .title h1 {
@@ -969,20 +1041,47 @@ hr:last-child {
 
     .search-bar {
         display:none;
+        right:307px;
+        top:50px;
+    }
+
+    .search-games {
+        z-index:0;
+        width: 295px;
+    }
+
+    img.close-icon {
+        margin-left:262px;
     }
 
     .search-mobile {
         display:flex;
         justify-content: flex-end;
         align-items: center;
+        padding-right: 16px;
+        cursor: pointer;
     }
 
     .search-mobile img {
         position:absolute;
     }
+
+    .logt {
+        gap: 50px;
+    }
+
+    .card-skeleton {
+        width: 360px;
+        height: 365px;
+    }
+
+    .skeleton {
+        margin-left:15px;
+        justify-content: flex-start;
+    }
     
     article, .game-ph img {
-        width: 288px;
+        width: 100%;
     }
 
     .container-game-info {
@@ -996,6 +1095,18 @@ hr:last-child {
     
     .single-game-info-plus {
         white-space: normal;
+    }
+
+    .menu-hamburger {
+        height: 567px;
+    }
+
+    .navigation-links {
+        gap: 14px;
+    }
+    
+    .cross-hamburger {
+        margin:0;
     }
 
 }
