--- a/styles/login.css
+++ b/styles/login.css
@@ -373,7 +373,7 @@ a img {
 }
 
 /*Responsive Mobile */
-@media (max-width: 320px) {
+@media (max-width: 420px) {
     
     body {
         overflow-x: hidden;
@@ -393,17 +393,19 @@ a img {
     }
 
     .auth-page-container {
+        width: 100%;
         margin-top:0px;
     }
 
     .auth-page-card {
+        width: 100%;
         border-radius: 12px 12px 0px 0px;
         padding: 22px 10px 62px 10px;
         margin-right: 0px;
     }
 
     .input-password, .input-email {
-        width: 288px;
+        width: 100%;
     }
 
     .welcome {
